--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,6 +2,7 @@
 @import "./fonts";
 @import "./variables";
 @import "./typography";
+@import "./typed";
 @import "./base-styles";
 // @import "./animate.css";
 @import "./header";
