--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -8,27 +8,33 @@
     align-items: center;
 }
 
-.about-links {
+.about-container {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    .about-title {
+        margin-bottom: 40px;
+    }
+    .about-text {
+        margin-bottom: 30px;
+        p {
+            padding-bottom: 20px;
+        }
+    }
+    .about-links {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 60%;
 }
-
-.about-container {
-    width: 75%;
-    .about-title {
-        padding-bottom: 40px;
-    }
-    p {
-        padding-bottom: 20px;
-    }
 }
 
 .about-image {
-    width: 20%;
+    display: flex;
+    width: 30%;
     img {
-        max-width: 250px;
+        width: 100%;
     }
 }
 
