--- a/styles/sass/_skills.scss
+++ b/styles/sass/_skills.scss
@@ -10,18 +10,18 @@
 .skill-icons {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     // margin: 40px;
 }
 
 .skill-container {
-    width: 200px;
+    width: calc(100% / 4);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 15px;
+    padding: 20px;
     text-align: center;
     p {
         visibility: hidden;
