--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -14,7 +14,7 @@ body {
 h1, h2, h3, h4 {
     font-family: $headingFont;
     line-height: 110%;
-    font-weight: 700;
+    // font-weight: 400;
 }
 
 h1 {
