--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -11,19 +11,20 @@ $bodyFont: 'Montserrat', sans-serif;
 
 /* colors */
 // default light mode theme
-$surface-primary: #F5F2ED;
+$surface-primary: #FDFAF5;
 $surface-secondary: #F0EBE4;
-$text-primary: #12161A;
+$text-primary: #082340;
 
 /// dark mode inverted theme
 /// 
 
 
-$inverted-surface-primary: #12161A;
+$inverted-surface-primary: #082340;
 $inverted-surface-secondary: #1B2126;
 $inverted-text-primary: #F5F2ED;
 
 $accent-blue: #168CFA;
+// $accent-blue: #ee8d0f;
 
 $orange: #FFC065;
 $pink: #FE6564;
