--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -1,5 +1,5 @@
 
-@media (max-width: 991px) {
+@media (max-width: 1100px) {
 
     // FONT size
 
@@ -45,20 +45,10 @@
         padding-bottom: 15px;
     }
 
-    // PROJECT
-    .project {
-        flex-direction: column;
-        .project-image,
-        .project-description {
-            width: 100%;
-        }
-        .project-description h4 {
-            padding-top: 30px;
-        }
-    }
+    // PROJECTS
 
-    .project-2, .project-4 {
-        flex-direction: column-reverse;
+    .project-description {
+        padding: 30px;
     }
 
     // CONTACT
@@ -80,7 +70,7 @@
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 900px) {
 
     // FONT size
 
@@ -91,10 +81,27 @@
     h2 {
         font-size: 2.8rem;
     }
+
+    h3 {
+        font-size: 2.2rem;
+    }
     
     h4 {
         font-size: 1.8rem;
 
+    }
+
+        // PROJECT
+    .project {
+        flex-direction: column;
+        .project-image,
+        .project-description {
+            width: 100%;
+        }
+    }
+
+    .project-2, .project-4 {
+        flex-direction: column-reverse;
     }
 
     // CONTACT
@@ -121,23 +128,25 @@
         font-size: 2.4rem;
     }
 
+    h3 {
+        font-size: 1.8rem;
+    }
+
+    // .button
+    button,
+a.button {
+    font-size: 1.1rem;
+    font-weight: 700;
+    padding: 12px 14px;
+}
+
     .skill-icon {
         font-size: 2.5rem;
         padding-bottom: 10px;
     }
 
-    .project {
+    .project-description {
         padding: 30px;
-    }
-
-    .project-links {
-        display: flex;
-        flex-direction: column;
-        justify-items: flex-start;
-        .button {
-            width: 190px;
-            margin-bottom: 20px;
-        }
     }
 
 }
@@ -145,10 +154,30 @@
 @media (max-width: 480px) {
 
     h1 {
-        font-size: 3.8rem;
+        font-size: 3.1rem;
     }
 
-    // h2 {
-    //     font-size: 2rem;
-    // }
+    h2 {
+        font-size: 2.1rem;
+    }
+
+    h3 {
+        font-size: 1.3rem;
+    }
+
+    p {
+        font-size: 0.8rem;
+    }
+
+    .project-links {
+        display: flex;
+        flex-direction: column;
+        justify-items: flex-start;
+        .button {
+            font-size: 1rem;
+            width: 160px;
+            margin-bottom: 10px;
+        }
+    }
+
 }
