--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -15,11 +15,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    background-color: $surface-secondary;
-    padding: 50px;
     margin-bottom: 30px;
-    border: 1px solid $text-primary;
-
 
     //     flex-direction: column;
     //     justify-content: center;
@@ -41,10 +37,22 @@
         width: 100%;
         display: inline-block;
         box-shadow: none;
-        transition: 0.5s;
-        &:hover {
-            box-shadow: 0px 13px 18px 0px $accent-blue;
-        }
+        transition: box-shadow 0.5s;
+        // &:hover {
+        //     box-shadow: -5px 5px #e4a436;
+        // }
+    }
+}
+
+// .project-1 .project-image img {
+//     &:hover, &:focus {
+//         box-shadow: -5px 5px #e4a436;
+//     }
+// }
+
+.project-2 .project-image img {
+    &:hover, &:focus {
+        box-shadow: -5px 5px #984638;
     }
 }
 
@@ -71,23 +79,30 @@
 
 .project-description {
     width: 60%;
+    background-color: $surface-secondary;
+    // border: 1px solid $text-primary;
+    padding: 50px;
     p {
-        padding: 30px 0;
+        padding: 20px 0;
     }
-    .button {
-        margin-right: 20px;
+    .project-links {
+        margin-top: 30px;
+        .button {
+            margin-right: 20px;
+        }
     }
 
 }
 
 .tools-used {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
     li {
         font-size: 0.8rem;
         border: 1px solid black;
-        padding: 3px 8px;
-        margin: 0 6px 50px 0;
+        padding: 2px 4px;
+        margin: 0 6px 6px 0;
         &:hover, &:focus {
             border: 1px solid $accent-blue;
             color: $accent-blue;
@@ -95,14 +110,3 @@
     }
 }
 
-.button.borderless {
-    padding: 0;
-    border-color: transparent;
-    background-color: transparent;
-    transition-property: text-shadow;
-    color: #12161a;
-    &:hover, &:focus {
-    box-shadow: none;
-    text-shadow: -1px 1px 0 #168cfa;
-    }
-}
