--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -11,7 +11,7 @@ body {
     color: $text-primary;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h4 {
     font-family: $headingFont;
     line-height: 110%;
     // font-weight: 400;
@@ -49,17 +49,20 @@ h1 {
 //     z-index: -1;
 // }
 
-h2, h3 {
-    font-weight: 600;
-}
+// h2, h3 {
+//     font-weight: 600;
+// }
 
 h2 {
     font-size: 3.2rem;
+    font-weight: 600;
     padding-right: 25px;
 
 }
 
 h3 {
+    font-family: $bodyFont;
+    font-weight: 300;
     font-size:  2.7rem;
     line-height: 125%;
 
